styles/light.scss
/* scroll bar */
.light ::-webkit-scrollbar-track {
    background: #333;
}

.light ::-webkit-scrollbar-thumb {
    background: #555;
    outline: 0.06125rem solid #555;
}

.light body {
    background: #eee;
    color: #111;
}

.light .tippy-box {
    background: #ddd;
    color: #111;
}

.light .tippy-arrow {
    color: #ddd;
}

.light .view-wrapper {
    background: #fff;
}

.light .icon-button {
    fill: #555;

    &:hover {
        background: rgba(0, 0, 0, 0.05);
    }

    &:active {
        background: rgba(0, 0, 0, 0.1);
    }

    &.disabled {
        background: rgba(0, 0, 0, 0.2);
    }
}

.light .bottom-bar {
    background: #ddd;
}

.light .bottom-bar-right-container {
    background: #ccc;
}

.light .page-1-intro-h {
    color: #222;
}

.light .page-1-intro-p {
    color: #555;
}

.light .fill-svg {
    fill: #ddd;
    stroke: #ddd;
}

.light .my-project-h {
    color: #aaa;
}

.light .project-link {
    color: #f00;

    &:hover {
        color: #a00;
    }
}

